@@ -49,8 +49,8 @@ public class GenericArrays {
 		List<?>[] lsa = new List<?>[10]; // ok, array of unbounded wildcard type
 		Object o = lsa;
 		Object[] oa = (Object[]) o;
-		List<Integer> li = new ArrayList<Integer>();
-		li.add(new Integer(3));
+		List<Integer> li = new ArrayList<>();
+		li.add(Integer.valueOf(3));
 		oa[1] = li; // correct
 		String s = (String) lsa[1].get(0); // run time error, but cast is explicit
 
