@@ -57,6 +57,7 @@ import com.ibm.wala.types.MethodReference;
 import com.ibm.wala.types.TypeReference;
 import com.ibm.wala.util.collections.HashMapFactory;
 import com.ibm.wala.util.collections.HashSetFactory;
+import com.ibm.wala.util.collections.Iterator2Iterable;
 import com.ibm.wala.util.debug.Assertions;
 import com.ibm.wala.util.warnings.Warnings;
 
@@ -66,7 +67,7 @@ import com.ibm.wala.util.warnings.Warnings;
 public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
 
   /**
-   * A Map from CallerSiteContext -> Set <TypeReference>represents the types a factory method might create in a particular context
+   * A Map from CallerSiteContext -&gt; Set &lt;TypeReference&gt;represents the types a factory method might create in a particular context
    */
   private final Map<Context, Set<TypeReference>> map = HashMapFactory.make();
 
@@ -157,8 +158,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     }
     SpecializedFactoryMethod m = findOrCreateSpecializedFactoryMethod(node);
     HashSet<NewSiteReference> result = HashSetFactory.make(5);
-    for (Iterator<SSAInstruction> it = m.getAllocationStatements().iterator(); it.hasNext();) {
-      SSANewInstruction s = (SSANewInstruction) it.next();
+    for (SSAInstruction ssaInstruction : m.getAllocationStatements()) {
+      SSANewInstruction s = (SSANewInstruction) ssaInstruction;
       result.add(s.getNewSite());
     }
     return result.iterator();
@@ -263,7 +264,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
   private SpecializedFactoryMethod findOrCreateSpecializedFactoryMethod(CGNode node) {
     SpecializedFactoryMethod m = syntheticMethodCache.get(node.getContext());
     if (m == null) {
-      Set types = getTypesForContext(node.getContext());
+      Set<TypeReference> types = getTypesForContext(node.getContext());
       m = new SpecializedFactoryMethod((SummarizedMethod) node.getMethod(), node.getContext(), types);
       syntheticMethodCache.put(node.getContext(), m);
     }
@@ -312,7 +313,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     }
   }
 
-  public Iterator iterateCastTypes(CGNode node) {
+  public Iterator<TypeReference> iterateCastTypes(CGNode node) {
     if (node == null) {
       throw new IllegalArgumentException("node is null");
     }
@@ -348,7 +349,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     /**
      * List of synthetic invoke instructions we model for this specialized instance.
      */
-    final private ArrayList<SSAInstruction> calls = new ArrayList<SSAInstruction>();
+    final private ArrayList<SSAInstruction> calls = new ArrayList<>();
 
     /**
      * The method being modelled
@@ -378,7 +379,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       }
     }
 
-    protected SpecializedFactoryMethod(final SummarizedMethod m, Context context, final Set S) {
+    protected SpecializedFactoryMethod(final SummarizedMethod m, Context context, final Set<TypeReference> S) {
       super(m, m.getDeclaringClass(), m.isStatic(), true);
 
       this.context = context;
@@ -393,8 +394,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       // add original statements from the method summary
       nextLocal = addOriginalStatements(m);
 
-      for (Iterator it = S.iterator(); it.hasNext();) {
-        TypeReference type = (TypeReference) it.next();
+      for (TypeReference type : S) {
         TypeAbstraction T = typeRef2TypeAbstraction(m.getClassHierarchy(), type);
         addStatementsForTypeAbstraction(T);
       }
@@ -506,8 +506,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       SSAInstruction[] original = m.getStatements(options.getSSAOptions());
       // local value number 1 is "this", so the next free value number is 2
       int nextLocal = 2;
-      for (int i = 0; i < original.length; i++) {
-        SSAInstruction s = original[i];
+      for (SSAInstruction s : original) {
         allInstructions.add(s);
         if (s instanceof SSAInvokeInstruction) {
           calls.add(s);
@@ -537,8 +536,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
         allInstructions.add(r);
       }
 
-      for (; it.hasNext();) {
-        IClass klass = it.next();
+      for (IClass klass : Iterator2Iterable.make(it)) {
         TypeReference T = klass.getReference();
         if (klass.isAbstract() || klass.isInterface() || typesAllocated.contains(T)) {
           continue;
@@ -603,8 +601,8 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
     public SSAInstruction[] getStatements() {
       SSAInstruction[] result = new SSAInstruction[allInstructions.size()];
       int i = 0;
-      for (Iterator<SSAInstruction> it = allInstructions.iterator(); it.hasNext();) {
-        result[i++] = it.next();
+      for (SSAInstruction ssaInstruction : allInstructions) {
+        result[i++] = ssaInstruction;
       }
       return result;
     }
@@ -634,7 +632,7 @@ public class FactoryBypassInterpreter extends AbstractReflectionInterpreter {
       Map<Integer, ConstantValue> constants = null;
       if (valueNumberForConstantOne > -1) {
         constants = HashMapFactory.make(1);
-        constants.put(new Integer(valueNumberForConstantOne), new ConstantValue(new Integer(1)));
+        constants.put(Integer.valueOf(valueNumberForConstantOne), new ConstantValue(Integer.valueOf(1)));
       }
 
       return new SyntheticIR(this, context, new InducedCFG(instrs, this, context), instrs, options, constants);
