@@ -53,12 +53,7 @@ import com.ibm.wala.ssa.SSAPhiInstruction;
 import com.ibm.wala.ssa.SSAPiInstruction;
 import com.ibm.wala.ssa.SSAReturnInstruction;
 import com.ibm.wala.types.TypeReference;
-import com.ibm.wala.util.collections.FilterIterator;
-import com.ibm.wala.util.collections.HashMapFactory;
-import com.ibm.wala.util.collections.HashSetFactory;
-import com.ibm.wala.util.collections.Iterator2Collection;
-import com.ibm.wala.util.collections.Iterator2Iterable;
-import com.ibm.wala.util.collections.MapUtil;
+import com.ibm.wala.util.collections.*;
 import com.ibm.wala.util.config.SetOfClasses;
 import com.ibm.wala.util.debug.Assertions;
 import com.ibm.wala.util.debug.UnimplementedError;
@@ -80,7 +75,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
   public enum Dependency {CONTROL_DEP, DATA_AND_CONTROL_DEP}
   
   private final SlowSparseNumberedLabeledGraph<Statement, Dependency> delegate =
-    new SlowSparseNumberedLabeledGraph<Statement, Dependency>(Dependency.DATA_AND_CONTROL_DEP);
+    new SlowSparseNumberedLabeledGraph<>(Dependency.DATA_AND_CONTROL_DEP);
 /** END Custom change: control deps */                
 
   private final static boolean VERBOSE = false;
@@ -166,7 +161,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
 
   /**
    * WARNING: Since we're using a {@link HashMap} of {@link SSAInstruction}s, and equals() of {@link SSAInstruction} assumes a
-   * canonical representative for each instruction, we <bf>must</bf> ensure that we use the same IR object throughout
+   * canonical representative for each instruction, we <b>must</b> ensure that we use the same IR object throughout
    * initialization!!
    */
   private void populate() {
@@ -250,7 +245,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
       Assertions.productionAssertion(cOptions.equals(ControlDependenceOptions.FULL));
     }
 
-    ControlDependenceGraph<ISSABasicBlock> cdg = new ControlDependenceGraph<ISSABasicBlock>(
+    ControlDependenceGraph<ISSABasicBlock> cdg = new ControlDependenceGraph<>(
         controlFlowGraph);
     for (ISSABasicBlock bb : cdg) {
       if (bb.isExitBlock()) {
@@ -291,10 +286,8 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
       // any
       // control-dependent successors
       if (src != null) {
-        for (Iterator<? extends ISSABasicBlock> succ = cdg.getSuccNodes(bb); succ.hasNext();) {
-          ISSABasicBlock bb2 = succ.next();
-          for (Iterator<SSAInstruction> it2 = bb2.iterator(); it2.hasNext();) {
-            SSAInstruction st = it2.next();
+        for (ISSABasicBlock bb2 : Iterator2Iterable.make(cdg.getSuccNodes(bb))) {
+          for (SSAInstruction st : bb2) {
             if (st != null) {
               Statement dest = ssaInstruction2Statement(st, ir, instructionIndices);
               assert src != null;
@@ -339,12 +332,10 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
      */
     if (!dOptions.equals(DataDependenceOptions.NONE)) {
       for (ISSABasicBlock bb : cdg) {
-        for (Iterator<SSAPhiInstruction> ps = bb.iteratePhis(); ps.hasNext();) {
-          SSAPhiInstruction phi = ps.next();
+        for (SSAPhiInstruction phi : Iterator2Iterable.make(bb.iteratePhis())) {
           Statement phiSt = ssaInstruction2Statement(phi, ir, instructionIndices);
           int phiUseIndex = 0;
-          for (Iterator<? extends ISSABasicBlock> preds = controlFlowGraph.getPredNodes(bb); preds.hasNext();) {
-            ISSABasicBlock pb = preds.next();
+          for (ISSABasicBlock pb : Iterator2Iterable.make(controlFlowGraph.getPredNodes(bb))) {
             int use = phi.getUse(phiUseIndex);
             if (use == AbstractIntStackMachine.TOP) {
               // the predecessor is part of some infeasible bytecode. we probably don't want slices to include such code, so ignore.
@@ -364,8 +355,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
               delegate.addEdge(pst, phiSt, Dependency.CONTROL_DEP);
 /** END Custom change: control deps */                
             } else {
-              for (Iterator<? extends ISSABasicBlock> cdps = cdg.getPredNodes(pb); cdps.hasNext();) {
-                ISSABasicBlock cpb = cdps.next();
+              for (ISSABasicBlock cpb : Iterator2Iterable.make(cdg.getPredNodes(pb))) {
 /** BEGIN Custom change: control deps */                
                 if (cpb.getLastInstructionIndex() < 0) {
                   continue;
@@ -437,8 +427,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
       }
     }
 
-    for (Iterator<? extends Statement> it = iterator(); it.hasNext();) {
-      Statement s = it.next();
+    for (Statement s : this) {
       switch (s.getKind()) {
       case NORMAL:
       case CATCH:
@@ -458,8 +447,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
           // statement
           for (int i = 0; i < statement.getNumberOfDefs(); i++) {
             int def = statement.getDef(i);
-            for (Iterator<SSAInstruction> it2 = DU.getUses(def); it2.hasNext();) {
-              SSAInstruction use = it2.next();
+            for (SSAInstruction use : Iterator2Iterable.make(DU.getUses(def))) {
               if (dOptions.isIgnoreBasePtrs()) {
                 if (use instanceof SSANewInstruction) {
                   // cut out array length parameters
@@ -495,8 +483,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
         }
 
         ValueNumberCarrier a = (ValueNumberCarrier) s;
-        for (Iterator<SSAInstruction> it2 = DU.getUses(a.getValueNumber()); it2.hasNext();) {
-          SSAInstruction use = it2.next();
+        for (SSAInstruction use : Iterator2Iterable.make(DU.getUses(a.getValueNumber()))) {
           if (dOptions.isIgnoreBasePtrs()) {
             if (use instanceof SSANewInstruction) {
               // cut out array length parameters
@@ -679,19 +666,17 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
 
     // in reaching defs calculation, exclude heap statements that are
     // irrelevant.
-    Predicate f = new Predicate() {
-      @Override public boolean test(Object o) {
-        if (o instanceof HeapStatement) {
-          HeapStatement h = (HeapStatement) o;
-          return h.getLocation().equals(pk);
-        } else {
-          return true;
-        }
+    Predicate<Statement> f = o -> {
+      if (o instanceof HeapStatement) {
+        HeapStatement h = (HeapStatement) o;
+        return h.getLocation().equals(pk);
+      } else {
+        return true;
       }
     };
-    Collection<Statement> relevantStatements = Iterator2Collection.toSet(new FilterIterator<Statement>(iterator(), f));
+    Collection<Statement> relevantStatements = Iterator2Collection.toSet(new FilterIterator<>(iterator(), f));
 
-    Map<Statement, OrdinalSet<Statement>> heapReachingDefs = new HeapReachingDefs<T>(modRef, heapModel).computeReachingDefs(node, ir, pa, mod,
+    Map<Statement, OrdinalSet<Statement>> heapReachingDefs = new HeapReachingDefs<>(modRef, heapModel).computeReachingDefs(node, ir, pa, mod,
         relevantStatements, new HeapExclusions(SetComplement.complement(new SingletonSet(t))), cg);
 
     for (Statement st : heapReachingDefs.keySet()) {
@@ -771,18 +756,19 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
    * @return Statements representing each return instruction in the ir
    */
   private Collection<NormalStatement> computeReturnStatements(final IR ir) {
-    Predicate filter = new Predicate() {
-      @Override public boolean test(Object o) {
-        if (o instanceof NormalStatement) {
-          NormalStatement s = (NormalStatement) o;
-          SSAInstruction st = ir.getInstructions()[s.getInstructionIndex()];
-          return st instanceof SSAReturnInstruction;
-        } else {
-          return false;
-        }
+    Predicate<Statement> filter = o -> {
+      if (o instanceof NormalStatement) {
+        NormalStatement s = (NormalStatement) o;
+        SSAInstruction st = ir.getInstructions()[s.getInstructionIndex()];
+        return st instanceof SSAReturnInstruction;
+      } else {
+        return false;
       }
     };
-    return Iterator2Collection.toSet(new FilterIterator<NormalStatement>(iterator(), filter));
+    return Iterator2Collection.toSet(
+        new MapIterator<>(
+            new FilterIterator<>(iterator(), filter),
+            NormalStatement.class::cast));
   }
 
   /**
@@ -800,7 +786,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
 
   /**
    * Wrap an {@link SSAInstruction} in a {@link Statement}. WARNING: Since we're using a {@link HashMap} of {@link SSAInstruction}s,
-   * and equals() of {@link SSAInstruction} assumes a canonical representative for each instruction, we <bf>must</bf> ensure that we
+   * and equals() of {@link SSAInstruction} assumes a canonical representative for each instruction, we <b>must</b> ensure that we
    * use the same IR object throughout initialization!!
    */
   private Statement ssaInstruction2Statement(SSAInstruction s, IR ir, Map<SSAInstruction, Integer> instructionIndices) {
@@ -842,7 +828,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
       for (int i = 0; i < instructions.length; i++) {
         SSAInstruction s = instructions[i];
         if (s != null) {
-          result.put(s, new Integer(i));
+          result.put(s, Integer.valueOf(i));
         }
       }
     }
@@ -902,7 +888,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
    * @param dOptions
    */
   private void createReturnStatements() {
-    ArrayList<Statement> list = new ArrayList<Statement>();
+    ArrayList<Statement> list = new ArrayList<>();
     if (!node.getMethod().getReturnType().equals(TypeReference.Void)) {
       NormalReturnCallee n = new NormalReturnCallee(node);
       delegate.addNode(n);
@@ -931,7 +917,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
    */
   private void createCalleeParams() {
     if (paramCalleeStatements == null) {
-      ArrayList<Statement> list = new ArrayList<Statement>();
+      ArrayList<Statement> list = new ArrayList<>();
       int paramCount = node.getMethod().getNumberOfParameters();
       
       for (int i = 1; i <= paramCount; i++) {
@@ -960,8 +946,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
    */
   private void createSpecialStatements(IR ir) {
     // create a node for instructions which do not correspond to bytecode
-    for (Iterator<SSAInstruction> it = ir.iterateAllInstructions(); it.hasNext();) {
-      SSAInstruction s = it.next();
+    for (SSAInstruction s : Iterator2Iterable.make(ir.iterateAllInstructions())) {
       if (s instanceof SSAPhiInstruction) {
         delegate.addNode(new PhiStatement(node, (SSAPhiInstruction) s));
       } else if (s instanceof SSAGetCaughtExceptionInstruction) {
@@ -1046,7 +1031,7 @@ public class PDG<T extends InstanceKey> implements NumberedGraph<Statement> {
     for (CGNode t : cg.getPossibleTargets(n, call.getCallSite())) {
       bv.addAll(loc.get(t).getBackingSet());
     }
-    return new OrdinalSet<PointerKey>(bv, loc.get(n).getMapping());
+    return new OrdinalSet<>(bv, loc.get(n).getMapping());
   }
 
   @Override
